init: setup django rest framework project

--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,7 @@ celerybeat.pid
 # Environments
 .env
 .venv
+postgres.env.*
 env/
 venv/
 ENV/
@@ -172,3 +173,4 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+.qodo
